--- a/emails/templates/emails/index.html
+++ b/emails/templates/emails/index.html
@@ -26,7 +26,7 @@
   var wsSendEmail = "{% url 'emails:wsSendEmail' %}"
 </script>
 <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-<script src="{% static 'emails/js/getCookie.js' %}"></script>
-<script src="{% static 'emails/js/fetchRequest.js' %}"></script>
-<script src="{% static 'emails/js/emails.js' %}"></script>
+<script src="https://s3.amazonaws.com/luckyware.mx/celery/getCookie.js"></script>
+<script src="https://s3.amazonaws.com/luckyware.mx/celery/fetchRequest.js"></script>
+<script src="https://s3.amazonaws.com/luckyware.mx/celery/emails.js"></script>
 </html>
