--- a/emails/templates/vista/index.html
+++ b/emails/templates/vista/index.html
@@ -7,10 +7,18 @@
   <title>Title</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link href="{% static 'emails/css/test.css' %}" rel="stylesheet" type="text/css">
 </head>
 
 <body>
   Hola vista nueva
+  <div class="customClass" id="myDiv">Change this background with JS</div>
+  <div>
+
+  </div>
+<script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+<script src="" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+<script src="{% static 'emails/js/test.js' %}"></script>
 </body>
 
 </html>
