--- a/emails/templates/vista/index.html
+++ b/emails/templates/vista/index.html
@@ -11,14 +11,15 @@
 </head>
 
 <body>
-  Hola vista nueva
+  
   <div class="customClass" id="myDiv">Change this background with JS</div>
-  <div>
-
+  <div class="Text">
+    Hola vista nueva
   </div>
-<script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-<script src="" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-<script src="{% static 'emails/js/test.js' %}"></script>
+  <script src="https://code.jquery.com/jquery-3.7.0.min.js"
+    integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+  <script src="" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+  <script src="{% static 'emails/js/test.js' %}"></script>
 </body>
 
 </html>
