--- a/emails/static/emails/css/test.css
+++ b/emails/static/emails/css/test.css
@@ -1,6 +1,17 @@
-.customClass
-{
+.customClass {
     background: red;
-    width: 100px;
-    height: 100px;
+    width: 200px;
+    height: 200px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.Text {
+
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
